--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 </section>
 
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/blueimp-md5/js/md5.min.js"></script>
 <script src="assets/js/GuestService.js"></script>
 <script src="assets/js/GuestController.js"></script>
 
